<resources>
    <string name="app_name">Checkupapp</string>
    <string name="title_home">Article</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Setting</string>
    <string name="Nama">Name</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="fb">Facebook</string>
    <string name="gg">Google</string>
    <string name="hai">Hello!</string>
    <string name="User">User</string>
    <string name="call">Video Call</string>
    <string name="regist">Are you new user? Register</string>
    <string name="Create">Create Account</string>
    <string name="forgot">Forget Password? Come</string>
    <string name="search">Search</string>
    <string name="gocheck">Les\'t Go Checkup</string>
    <string name="to_be_healthy">To be healthy</string>
    <string name="mesagge">Mesagge</string>
    <string name="profile_c">Change Photo</string>
    <string name="profile_d">Change password</string>
    <string name="profile_e">About</string>
    <string name="setting">Setting</string>
    <string name="consul">Consul</string>
    <string name="tips">Info</string>
    <string name="notification">Notification</string>
    <string name="voice_call">Voice Call</string>
    <string name="change">Change</string>
    <string name="address">Address</string>
    <string name="us">US</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="emaill">syrl@gmail.com</string>
    <string name="ckh">CheckUp – Your Friend for\n Better Mental Health!</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="login">Login</string>
    <string name="password_hint">Masukkan kata sandi Anda</string>
    <string name="back">Welcome</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bac">Back</string>
    <string name="next">Next</string>
    <string name="chekup">Chekup</string>
    <string name="kadang">Kadang</string>
    <string name="sering">Sering</string>
    <string name="tidak_pernah">Tidak Pernah</string>
    <string name="hasil_check_up">Hasil Check-Up</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="terjadi_kesalahan_saat_memuat_hasil">Terjadi kesalahan saat memuat hasil.</string>
    <string name="prediksi">Prediksi: %1$s</string>
    <string name="saran">Saran: %1$s</string>
    <string name="definisi">Definisi: %1$s</string>
    <string name="kategori">Kategori: %1$s</string>
    <string name="persentase">Persentase: %1$s</string>
    <string name="daftar_cerita_yang_dapat_digulir">Daftar cerita yang dapat digulir</string>
    <string name="lets_go">Lets GO</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="les_t_go_consultation">Let\'s GO Consultation</string>
    <string name="ttl1">Kesehatan mental mengacu pada kondisi emosional, psikologis, dan sosial seseorang yang memengaruhi cara berpikir, merasa, dan berperilaku dalam kehidupan sehari-hari</string>
    <string name="ttl2">Memiliki kesehatan mental yang baik memungkinkan seseorang untuk mengatasi stres, menjaga hubungan yang sehat, dan membuat keputusan yang tepat.</string>
    <string name="punya_sakit_mental_ayo_konsultasi">Punya sakit mental? Ayo konsultasi</string>
    <string name="kesehatan_mental_itu_penting">Kesehatan mental itu penting</string>
    <string name="ttl3">Kesehatan mental dipengaruhi oleh berbagai faktor, termasuk pengalaman hidup, hubungan interpersonal, kondisi genetik, dan lingkungan.</string>
    <string name="pentingnya_penanganan_kesehatan_mental">Pentingnya Penanganan Kesehatan mental</string>
    <string name="ttl4">Gangguan kesehatan mental, seperti depresi, kecemasan, dan stres, adalah beberapa masalah yang sering dialami dan dapat berdampak signifikan pada kualitas hidup seseorang.</string>
    <string name="ayo_konsultasi_dengan_dokter_ahli">Ayo konsultasi dengan dokter ahli</string>
    <string name="riwayat">History</string>
    <string name="_42234">42234</string>
    <string name="postal_code">Postal code</string>
    <string name="member">1. C659B4KY2059 - Jerry Zhonathan - Sekolah Tinggi Teknologi Informatika Sony Sugema- CC - active</string>
    <string name="about_us">About Us</string>
    <string name="idd">Team ID : C242-P5554</string>
    <string name="ppenjelasa">This application was developed as part of our project to help people monitor their mental health through a self-assessment app.</string>
    <string name="member2">2. C659B4KY2887 - Muhammad Hasan Mudzakir - Sekolah Tinggi Teknologi Informatika Sony Sugema - CC- active</string>
    <string name="member3">3. A349B4KY4252 - Syahrul Maulana - Universitas Buana Perjuangan Karawang - MD - active</string>
    <string name="member4">4. M296B4KY1581 - Galih Dwi Santiko - Universitas Pembangunan Nasional Veteran Jawa Timur- ML - active</string>
    <string name="member5">5. M296B4KX4499 - Winna Dhestyan Putri - Universitas Pembangunan Nasional Veteran Jawa Timur- ML - active</string>
    <string name="error_tidak_dapat_memuat_hasil">Error: Tidak dapat memuat hasil.</string>
</resources>