<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/topp_background"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/pertanyaan"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logoMenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/bipolar2"
            tools:ignore="ContentDescription" />


        <RadioGroup
            android:id="@+id/rgAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rd_btn"
                android:layoutDirection="rtl"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/kadang"
                android:textStyle="bold"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rd_btn"
                android:layoutDirection="rtl"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/sering"
                android:textStyle="bold"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rd_btn"
                android:layoutDirection="rtl"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/tidak_pernah"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/bac" />

            <Button
                android:id="@+id/btnNext"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>


