<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5DC">

        <com.aruel.checkupapp.costum.PasswordEditText
            android:id="@+id/editTextText2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:hint="@string/pw"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:inputType="textPassword"
            android:textColorHint="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/email"
            android:textColorHint="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextText2"
            app:layout_constraintVertical_bias="0.933"
            app:srcCompat="@drawable/btn_arraw1"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:drawableEnd="@drawable/facebook"
                android:padding="16dp"
                android:text="@string/fb"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:drawableEnd="@drawable/google"
                android:padding="16dp"
                android:text="@string/gg"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:text="@string/regist"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
